--- a/RabbitMQ.subscriber/RabbitMQ.subscriber.csproj
+++ b/RabbitMQ.subscriber/RabbitMQ.subscriber.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="5.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
