3. Adım : RabbitMqClientService class’sının oluşturulması

--- a/RabbitMQ.Watermark/appsettings.json
+++ b/RabbitMQ.Watermark/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQ": "amqps://jihwdhzu:Di2vfztYFMOPXtyiq7D-liqRM462dsVX@tiger.rmq.cloudamqp.com/jihwdhzu"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
