--- a/RabbitMQ.Watermark/RabbitMQ.Watermark.csproj
+++ b/RabbitMQ.Watermark/RabbitMQ.Watermark.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
