--- a/RabbitMQ.Watermark/RabbitMQ.Watermark.csproj
+++ b/RabbitMQ.Watermark/RabbitMQ.Watermark.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\watermarks\" />
   </ItemGroup>
 
 </Project>
