--- a/RabbitMQ.Excel/RabbitMQ.Excel.csproj
+++ b/RabbitMQ.Excel/RabbitMQ.Excel.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\files\" />
+  </ItemGroup>
+
 </Project>
