4. Adım :RabbitMQCLientService class’sımızın oluşturulması

--- a/RabbitMQ.Excel/appsettings.json
+++ b/RabbitMQ.Excel/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UdemyRabbitMQIdentity;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UdemyRabbitMQIdentity;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "RabbitMQ": "amqps://jihwdhzu:Di2vfztYFMOPXtyiq7D-liqRM462dsVX@tiger.rmq.cloudamqp.com/jihwdhzu"
   },
   "Logging": {
     "LogLevel": {
