7. Adım :Database first

--- a/FileCreateWorkerService/appsettings.json
+++ b/FileCreateWorkerService/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "SqlServer": "Data Source=DESKTOP-KBP5GNL;Initial Catalog=AdventureWorks2017;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "RabbitMQ": "amqps://jihwdhzu:Di2vfztYFMOPXtyiq7D-liqRM462dsVX@tiger.rmq.cloudamqp.com/jihwdhzu"
   },
   "Logging": {
